Top-right correct flex element spacing

--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ input {
 .notification {
   display: flex;
   align-items: center;
-  /* justify-content: center; */
+  justify-content: center;
   gap: 32px;
   padding: 12px 24px;
 }
